# dagger

./: Dagger File Engine.docx  README.md  package-lock.json  package.json  vite.config.ts  ~$gger File Engine.docx
src/: App.tsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/filesys/: actions.rs  mod.rs  nav.rs  stream.rs  watcher.rs
src-tauri/src/filesys/os/: windows.rs
src-tauri/src/filesys/stream/: fsstream.rs  mod.rs  opstream.rs  resolver.rs  thumbs.rs
src-tauri/src/search/: driver.rs  mod.rs  modals.rs
src-tauri/src/util/: caches.rs  cmd.rs  ffutils.rs  mod.rs  setup.rs
src-tauri/src/util/caches/: home.rs  layouts.rs  mod.rs  thumbs.rs
src/classes/: Tab.ts
src/components/: ConflictPrompt.tsx  LazyImage.tsx  Toasts.tsx
src/components/content/: ActionBar.tsx  ContentPanel.tsx  HomeLayout.tsx  NewFileMenu.tsx  SortMenu.tsx  StandardLayout.tsx  ViewMenu.tsx
src/components/navigation/: NavigationBar.tsx  PathBar.tsx  SearchBar.tsx
src/components/sidebar/: Sidebar.tsx  TreeNode.tsx
src/components/tabbing/: TabHeading.tsx  TabMenu.tsx
src/components/window/: TitleBar.tsx
src/scripts/: actions.ts  events.ts  layout.ts  navigation.ts  shortcuts.ts  stream.ts
