[package]
name = "dagger"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dagger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.6.0"
ort = "1.16.3"
tantivy = "0.25.0"
notify = "8.2.0"
rfd = "0.15.4"
base64 = "0.22.1"
tokio = { version = "1.47.1", features = ["fs", "macros"] }
image = { version = "0.25.8", features = ["jpeg", "png", "gif", "rayon"] }
jwalk = "0.8.1"
rayon = "1.11.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
dunce = "1.0.5"
opener = "0.8.3"
dirs-next = "2.0.0"
parselnk = "0.1.1"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_DataExchange",
    "Win32_System_Com_StructuredStorage"
] }
clipboard-win = "5.4.1"
windows-core = "0.62.2"

